12-weeks-terraform-aws/week3-autoscaling-no-alb/loadbalancer/03-target-group.tf
############################################
# 3) Target Group (EC2 / ASG targets)
############################################
resource "aws_lb_target_group" "app_tg" {
  name     = "${var.project}-tg"
  port     = 80
  protocol = "HTTP"
  vpc_id   = var.vpc_id

  # Health check configuration
  health_check {
    path                = "/"
    protocol            = "HTTP"
    interval            = 30
    timeout             = 5
    healthy_threshold   = 3
    unhealthy_threshold = 3
    matcher             = "200-399"
  }

  tags = {
    Name = "${var.project}-tg"
  }
}
