12-weeks-terraform-aws/week3-autoscaling-no-alb/loadbalancer/04-listener.tf
############################################
# 4) Listener (port 80 → forward to TG)
############################################
resource "aws_lb_listener" "http" {
  load_balancer_arn = aws_lb.app_alb.arn
  port              = 80
  protocol          = "HTTP"

  default_action {
    type             = "forward"
    target_group_arn = aws_lb_target_group.app_tg.arn
  }
}
